# manpage-supplement

./: CMakeLists.txt  README.org  manpage-template.org  modulefile.in
cmake/modules/: org_md_manpages.cmake  orgmanpages.cmake
share/bash-completion/completions/: man-edit.in
share/man/man1/: man-add.org
share/man/man7/: bash-completion-notes.org  configure-commands.org  fortran-notes.org  gdb-notes.org  gdb.org  git-notes.org  grep-notes.org  man-extras.org  my-git-notes.org  my-keys.org  openssl-notes.org  pixi-notes.org  spack-notes.org  tmux-notes.org  vim-notes.org  vim.org
